--- a/example/screen.css
+++ b/example/screen.css
@@ -13,7 +13,7 @@ body {
 
 article {
 	display: block;
-	margin: 50px;
+	margin: 30px;
 	position: relative;
 }
 
@@ -26,8 +26,8 @@ h1 {
 
 h2 {
 	margin: 60px 0 20px;
-	font-size: 22px;
-	line-height: 24px;
+	font-size: 18px;
+	line-height: 20px;
 	color: #222;
 }
 
@@ -55,10 +55,12 @@ code {
 
 .intro { margin-bottom: 50px; }
 
+strong { color: #222; }
+
 .block {
 	background: #eee;
-	padding: 20px;
-	margin-bottom: 30px;
+	padding: 10px;
+	margin-bottom: 20px;
 	text-align: center;
 	font-size: 14px;
 }
@@ -67,7 +69,7 @@ code {
 
 .container {
 	border: 5px solid #f00;
-	padding: 20px;
+	padding: 10px;
 	margin-bottom: 50px;
 	width: 30%;
 	float: left;
