--- a/example/screen.css
+++ b/example/screen.css
@@ -3,12 +3,22 @@ html { height: 100%; }
 
 body {
 	font-family: sans-serif;
-	color: #777;
+	color: rgba(255, 255, 255, 0.7);
 	font-size: 17px;
 	line-height: 1.4;
 	margin: 0;
 	padding: 0;
-	background: #fff;
+	background: #2c3e50;
+}
+
+a {
+	color: #fff;
+	text-decoration: none;
+	border-bottom: 1px solid rgba(255, 255, 225, 0.35);
+}
+
+a:hover {
+	border-bottom: 1px solid rgba(255, 255, 225, 0.6);
 }
 
 article {
@@ -21,59 +31,49 @@ h1 {
 	margin: 0 0 10px;
 	font-size: 32px;
 	line-height: 36px;
-	color: #222;
+	color: #fff;
 }
 
 h2 {
-	margin: 60px 0 20px;
+	margin: 60px 0 10px;
 	font-size: 18px;
 	line-height: 20px;
-	color: #222;
+	color: #fff;
 }
 
 p {
-	margin: 0 0 20px;
+	margin: 0 0 10px;
 }
 
-pre {
-	background: #eee;
-	border: 1px solid #ddd;
+.intro { margin-bottom: 40px; }
+
+.block {
+	background: #bdc3c7;
+	padding: 15px 20px;
+	margin: 5px;
+	text-align: center;
+	font-size: 14px;
+	color: #2c3e50;
+	max-width: 300px;
+	float: left;
+	
 	-webkit-border-radius: 3px;
 	   -moz-border-radius: 3px;
 	        border-radius: 3px;
-	margin: 20px auto;
-	padding: 15px;
-	font-size: 13px;
-	max-width: 800px;
-	overflow: auto;
-}
-
-code {
-	font-family: Consolas, Monaco, monospace;
-	font-size: 13px;
-}
-
-.intro { margin-bottom: 50px; }
-
-strong { color: #222; }
-
-.block {
-	background: #eee;
-	padding: 10px;
-	margin-bottom: 20px;
-	text-align: center;
-	font-size: 14px;
 }
 
 .block p { margin: 0; }
 
 .container {
-	border: 5px solid #f00;
-	padding: 10px;
-	margin-bottom: 50px;
-	width: 30%;
-	float: left;
-	margin-right: 3%;
+	background: rgba(255, 255, 255, 0.1);
+	padding: 15px;
+	margin-bottom: 20px;
+	overflow: hidden;
+	min-height: 120px;
+	
+	-webkit-border-radius: 4px;
+	   -moz-border-radius: 4px;
+	        border-radius: 4px;
 	
 	-webkit-box-sizing: border-box;
 	   -moz-box-sizing: border-box;
